--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,28 @@ languages:
                   weight: 10
                 - name: Tags
                   url: tags/
-                  weight: 10
+                  weight: 15
+                - name: Tags2
+                  url: tags/
+                  weight: 20
+                - name: Tags3
+                  url: tags/
+                  weight: 25
+                - name: Tags4
+                  url: tags/
+                  weight: 30
+                - name: Tags5
+                  url: tags/
+                  weight: 35
+                - name: Tags6
+                  url: tags/
+                  weight: 40
+                - name: Tags7
+                  url: tags/
+                  weight: 45
+                - name: Tags8
+                  url: tags/
+                  weight: 50
                 - name: WiKi
                   url: https://github.com/adityatelange/hugo-PaperMod/wiki/
                 - name: Discord
