--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ locale: "zh_Hans" # 语言环境 https://github.com/netlify/netlify-cms/tree/mas
 collections:
   - name: "post" # Used in routes, e.g., /admin/collections/blog
     label: "Post" # Used in the UI
-    folder: "content/posts" # The path to the folder where the documents are stored
+    folder: "content/posts/*" # The path to the folder where the documents are stored
     path: '{{slug}}/index' # beta feature
     media_folder: ''
     public_folder: ''
