--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -101,6 +101,47 @@ collections:
           media_library: { config: { multiple: true } },
         }
       - {label: "内容", name: "body", widget: "markdown", required: false}
+  - name: "tech" # Used in routes, e.g., /admin/collections/blog
+    label: "tech" # Used in the UI
+    folder: "content/posts/tech" # The path to the folder where the documents are stored
+    path: '{{slug}}/index' # beta feature
+    media_folder: ''
+    public_folder: ''
+    # adding a nested object will show the collection folder structure
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    create: true # 允许用户在这个集合中创建新的文件。    
+    fields: # 每份文件的字段，通常是前面的内容。
+      - {label: "文章封面", name: "image", widget: "image", required: false} 
+      - {label: "文章排序", name: "sticky", widget: "number", required: false, hint: "数值越大，该文章越靠前"}
+      - {label: "标题", name: "title", widget: "string" }
+      - {label: "副标题", name: "description", widget: "string", required: false}
+      - {label: "发布日期", name: "date", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss", dateFormat: "YYYY-MM-DD", timeFormat: "HH:mm:ss", required: false}
+      - {label: "更新日期", name: "updated", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss", dateFormat: "YYYY-MM-DD", timeFormat: "HH:mm:ss", required: false}
+      - {label: "标签", name: "tags", widget: "list", required: false}
+      - {label: "分类", name: "categories", widget: "list", required: false}
+      - {label: "关键词", name: "keywords", widget: "list", required: false}
+      - {label: "Slug", name: "slug", widget: "string", required: false}
+      - {label: "评论", name: "comments", widget: "boolean", default: true, required: false}
+      - label: "Cover"
+        name: "cover"
+        widget: "object"
+        collapsed: true
+        fields:
+          - {
+              label: "Image",
+              name: "image",
+              default: "images/cover.png",
+              widget: "string",
+            }
+      - {
+          label: "Images",
+          name: "thumbnail",
+          widget: "image",
+          choose_url: true,
+          required: false,
+          media_library: { config: { multiple: true } },
+        }
+      - {label: "内容", name: "body", widget: "markdown", required: false}
        
   - name: "page"
     label: "Page"
